# Rtur2003

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  ENHANCEMENT_SUMMARY.md  LICENSE  README.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: link-check.yml  snake.yml
assets/: style.css
assets/fonts/: PREVIEW.md  README.md
docs/: BEST_PRACTICES.md  USAGE.md
tests/: test_config.py  test_validate_links.py
tools/: __init__.py  config.py  validate_links.py
